--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -5,7 +5,6 @@
 body {
   height: 100vh;
   width: 100vw;
-  background-color: green;
   overflow: hidden;
   background: url(../images/deskAndBg.png) center bottom no-repeat;
   background-size: cover;
@@ -32,6 +31,7 @@ body {
   background-size: contain;
   z-index: 100;
   transform: translateY(70px);
+  border: 1px solid blue;
 }
 
 .shadow-clock {
@@ -46,85 +46,59 @@ body {
 
 .hour-hand, .min-hand, .sec-hand {
   position: absolute;
-  height: 80px;
-  width: 1px;
+  height: 500px;
+  width: 500px;
+  top: 0;
   left: 0;
-  right: 0;
-  bottom: -50px;
-  top: 0px;
-  margin: auto;
-  transform-origin: bottom;
-  overflow: visible;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-
-  // background-color: #000;
+  top: 20px;
 }
 
 .hour-hand {
-  width: 1px;
+  display: flex;
+  transform-origin: center;
+  margin-top: -20px;
 
   img {
-    height: 90px;
+    width: 11px;
+    height: 80px;
+    left: 241px;
+    top: 234px;
+    transform-origin: bottom center;
     position: absolute;
-  }
-
-  &:after {
-    @include pseudo;
-
-    height: 90px;
-    width: 1px;
-    transform: translateY(-0px);
-    top: 0;
-    left: 0;
-    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.5);
   }
 }
 
 .min-hand {
-  width: 1px;
-  bottom: -50px;
+  display: flex;
+  margin-top: -20px;
+  border: 1px solid red;
 
   img {
+    width: 11px;
     height: 100px;
-    transform: translateY(-20px);
+    left: 241px;
+    top: 215px;
     position: absolute;
-  }
-
-  &:after {
-    @include pseudo;
-
-    height: 100px;
-    width: 0px;
-    transform: translateY(-20px);
-    top: 0;
-    left: 0;
-    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.5);
+    transform-origin: bottom center;
   }
 }
 
 .sec-hand {
-  bottom: 20;
-  width: 1px;
   z-index: 0;
+  display: flex;
+  transform-origin: center;
+  margin-top: -20px;
 
   img {
-    height: 150px;
-    transform: translateY(-40px);
-    position: absolute;
-  }
-
-  &:after {
-    @include pseudo;
-
+    width: 5px;
     height: 120px;
-    width: 0px;
-    top: 0;
-    left: 0;
-    transform: translateY(-40px);
-    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.5);
+    left: 245px;
+    top: 195px;
+    transform-origin: bottom center;
+    position: absolute;
   }
 }
 
